[package]
name = "homepage"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
crossterm = "0.29.0"
num-traits = "0.2.19"
ratatui = "0.29.0"
google-calendar3 = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = "1.6.0"
hyper-rustls = { version = "0.27.6", features = ["http1", "http2"] }
tokio = { version = "1.45.1", features = ["full"] }
hyper-util = { version = "0.1.13", features = ["client", "client-legacy"] }
yup-oauth2 = "12.1.0"
dirs = "6.0.0"
rustls = { version = "0.23.27", features = ["aws_lc_rs"] }
rusqlite = "0.36.0"
